// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bug > bug (no title) 1`] = `
"Error: --title is required
Suggestion: Provide --title <title>"
`;

exports[`bug > bug --format json (no title) 1`] = `
"{
  "error": true,
  "code": "TITLE_REQUIRED",
  "message": "--title is required",
  "suggestion": "Provide --title <title>"
}"
`;

exports[`bug > bug --title Test --format json 1`] = `
"{
  "repo": "ant-design/ant-design",
  "title": "Test",
  "body": "<!-- generated by @ant-design/cli. DO NOT REMOVE -->\\n\\n### Reproduction link\\n\\n[_No response_](_No response_)\\n\\n### Steps to reproduce\\n\\n_No response_\\n\\n### What is expected?\\n\\n_No response_\\n\\n### What is actually happening?\\n\\n_No response_\\n\\n| Environment | Info |\\n| --- | --- |\\n| antd | unknown |\\n| React | unknown |\\n| System | <system> |\\n| Browser | - |\\n\\n---\\n<sub>Generated by [@ant-design/cli](https://github.com/ant-design/ant-design-cli)</sub>",
  "url": "https://github.com/ant-design/ant-design/issues/new?title=Test&body=%3C%21--+generated+by+%40ant-design%2Fcli.+DO+NOT+REMOVE+--%3E%0A%0A%23%23%23+Reproduction+link%0A%0A%5B_No+response_%5D%28_No+response_%29%0A%0A%23%23%23+Steps+to+reproduce%0A%0A_No+response_%0A%0A%23%23%23+What+is+expected%3F%0A%0A_No+response_%0A%0A%23%23%23+What+is+actually+happening%3F%0A%0A_No+response_%0A%0A%7C+Environment+%7C+Info+%7C%0A%7C+---+%7C+---+%7C%0A%7C+antd+%7C+unknown+%7C%0A%7C+React+%7C+unknown+%7C%0A%7C+System+%7C+<system>+%7C%0A%7C+Browser+%7C+-+%7C%0A%0A---%0A%3Csub%3EGenerated+by+%5B%40ant-design%2Fcli%5D%28https%3A%2F%2Fgithub.com%2Fant-design%2Fant-design-cli%29%3C%2Fsub%3E"
}"
`;

exports[`bug > bug --title Test --format markdown 1`] = `
"<!-- generated by @ant-design/cli. DO NOT REMOVE -->

### Reproduction link

[_No response_](_No response_)

### Steps to reproduce

_No response_

### What is expected?

_No response_

### What is actually happening?

_No response_

| Environment | Info |
| --- | --- |
| antd | unknown |
| React | unknown |
| System | <system> |
| Browser | - |

---
<sub>Generated by [@ant-design/cli](https://github.com/ant-design/ant-design-cli)</sub>"
`;

exports[`bug > bug --title Test --format text 1`] = `
"Repository: ant-design/ant-design
Title: Test

--- Issue Body ---
<!-- generated by @ant-design/cli. DO NOT REMOVE -->

### Reproduction link

[_No response_](_No response_)

### Steps to reproduce

_No response_

### What is expected?

_No response_

### What is actually happening?

_No response_

| Environment | Info |
| --- | --- |
| antd | unknown |
| React | unknown |
| System | <system> |
| Browser | - |

---
<sub>Generated by [@ant-design/cli](https://github.com/ant-design/ant-design-cli)</sub>
--- End ---

To submit, re-run with --submit flag."
`;

exports[`bug > bug --title Test --steps "Click" --expected "OK" --actual "Crash" 1`] = `
"Repository: ant-design/ant-design
Title: Test

--- Issue Body ---
<!-- generated by @ant-design/cli. DO NOT REMOVE -->

### Reproduction link

[_No response_](_No response_)

### Steps to reproduce

Click

### What is expected?

OK

### What is actually happening?

Crash

| Environment | Info |
| --- | --- |
| antd | unknown |
| React | unknown |
| System | <system> |
| Browser | - |

---
<sub>Generated by [@ant-design/cli](https://github.com/ant-design/ant-design-cli)</sub>
--- End ---

To submit, re-run with --submit flag."
`;

exports[`bug-cli > bug-cli --title Test --description "Info crashes" 1`] = `
"Repository: ant-design/ant-design-cli
Title: Test

--- Issue Body ---
### Description

Info crashes

### Steps to Reproduce

_No response_

### Expected Behavior

_No response_

### Actual Behavior

_No response_

### Environment

| Info | Value |
|------|-------|
| @ant-design/cli | <version> |
| Node | <node-version> |
| System | <system> |

---
<sub>Generated by [@ant-design/cli](https://github.com/ant-design/ant-design-cli)</sub>
--- End ---

To submit, re-run with --submit flag."
`;

exports[`bug-cli > bug-cli --title Test --format json 1`] = `
"{
  "repo": "ant-design/ant-design-cli",
  "title": "Test",
  "body": "### Description\\n\\n_No response_\\n\\n### Steps to Reproduce\\n\\n_No response_\\n\\n### Expected Behavior\\n\\n_No response_\\n\\n### Actual Behavior\\n\\n_No response_\\n\\n### Environment\\n\\n| Info | Value |\\n|------|-------|\\n| @ant-design/cli | <version> |\\n| Node | <node-version> |\\n| System | <system> |\\n\\n---\\n<sub>Generated by [@ant-design/cli](https://github.com/ant-design/ant-design-cli)</sub>",
  "url": "https://github.com/ant-design/ant-design-cli/issues/new?title=Test&body=%23%23%23+Description%0A%0A_No+response_%0A%0A%23%23%23+Steps+to+Reproduce%0A%0A_No+response_%0A%0A%23%23%23+Expected+Behavior%0A%0A_No+response_%0A%0A%23%23%23+Actual+Behavior%0A%0A_No+response_%0A%0A%23%23%23+Environment%0A%0A%7C+Info+%7C+Value+%7C%0A%7C------%7C-------%7C%0A%7C+%40ant-design%2Fcli+%7C+<version>+%7C%0A%7C+Node+%7C+<node-version>+%7C%0A%7C+System+%7C+<system>+%7C%0A%0A---%0A%3Csub%3EGenerated+by+%5B%40ant-design%2Fcli%5D%28https%3A%2F%2Fgithub.com%2Fant-design%2Fant-design-cli%29%3C%2Fsub%3E"
}"
`;

exports[`bug-cli > bug-cli --title Test --format markdown 1`] = `
"### Description

_No response_

### Steps to Reproduce

_No response_

### Expected Behavior

_No response_

### Actual Behavior

_No response_

### Environment

| Info | Value |
|------|-------|
| @ant-design/cli | <version> |
| Node | <node-version> |
| System | <system> |

---
<sub>Generated by [@ant-design/cli](https://github.com/ant-design/ant-design-cli)</sub>"
`;

exports[`bug-cli > bug-cli --title Test --format text 1`] = `
"Repository: ant-design/ant-design-cli
Title: Test

--- Issue Body ---
### Description

_No response_

### Steps to Reproduce

_No response_

### Expected Behavior

_No response_

### Actual Behavior

_No response_

### Environment

| Info | Value |
|------|-------|
| @ant-design/cli | <version> |
| Node | <node-version> |
| System | <system> |

---
<sub>Generated by [@ant-design/cli](https://github.com/ant-design/ant-design-cli)</sub>
--- End ---

To submit, re-run with --submit flag."
`;
